samples/_failures_safe/1761088528_eb4e16_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8411d192.c: In function ‘main’:
./samples/SAFE/__tmp_8411d192.c:164:9: error: expected declaration or statement at end of input
  164 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_8411d192.c:164:9: error: expected declaration or statement at end of input
